# docs/swagger.yaml
@@ -401,6 +401,10 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/internal_handler.ErrorResponse'
+        "409":
+          description: Slug уже существует
+          schema:
+            $ref: '#/definitions/internal_handler.ErrorResponse'
         "500":
           description: Internal Server Error
           schema:
